--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Taller Web I</title>
+  <title>VetConnect</title>
+  <link rel="icon" href= "logo_perrito.png" type="image/png">
 
   <!-- Boostrap core css -->
   <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
@@ -22,7 +23,7 @@
 
 <main role="main" class="container">
   <div class = "container">
-    <h1>Bienvenidos a Taller Web 1</h1>
+    <h1>¡Bienvenidos a VetConnect!</h1>
 
     <a href="login.html" class="btn btn-lg btn-primary btn-block">Volver</a>
   </div>
