--- a/src/main/webapp/resources/core/css/main.css
+++ b/src/main/webapp/resources/core/css/main.css
@@ -1,4 +1,17 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+
+}
+
 body {
+  background: linear-gradient(120deg, #7fd7c4, #a8edea);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding-top: 5rem;
 }
 .starter-template {
@@ -12,6 +25,10 @@ h1{
 
 h2{
 	color:#FF0000;
+}
+
+h3{
+    color: red;
 }
 
 .navbar-brand{
