--- a/src/main/webapp/WEB-INF/views/thymeleaf/login.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/login.html
@@ -8,11 +8,10 @@
     <link rel="icon" href= "logo_perrito.png" type="image/png">
 
     <!-- Boostrap core css -->
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>   
 
     <!-- custom style -->
-    <link rel="stylesheet" th:href= "/main.css">
+    <link rel="stylesheet" href= "/src/main/webapp/resources/core/css/main.css" type="text/css">
 
 </head>
 
